# ftp-project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  NOTES.txt  PROTOCOLE.txt  README.md  mysocket.cpp  mysocket.h
rendu/: README.txt  ftp.tgz
rendu/mono-client/: myclient.cpp  mysocket.h  serveur.cpp  serveur.h
rendu/multi-client/: Makefile  serveur.cpp
src/: Client.cpp  Client.h  Config.h  main.cpp  myclient.cpp  myclient.h  mysocket.cpp  mysocket.h  serveur.cpp  serveur.h
